fixed images being slightly distorted

--- a/css/main.css
+++ b/css/main.css
@@ -73,17 +73,18 @@ body {
 .gallery {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    width: 90%;
     padding: 0;
-    margin: 0;
+    margin: auto;
     font-size: large;
     clear: both;
 }
 
 div.gallery img {
-    margin-top: 2em;
-    width: 90%;
+    margin-top: 2rem;
+    width: 100%;
     max-width: 810px;
     border-style: ridge;
     box-shadow: black;
